Added existing implementation and test.

--- a/Source/RouteMapDecorators/RouteMapDecorators.csproj
+++ b/Source/RouteMapDecorators/RouteMapDecorators.csproj
@@ -34,11 +34,16 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Web.Routing" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RouteMapAttribute.cs" />
+    <Compile Include="RouteMapRegistration.cs" />
+    <Compile Include="RouteMapRegistry.cs" />
+    <Compile Include="RouteMapRoute.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
