--- a/Source/RouteMapDecorators.Tests/RouteMapDecorators.Tests.csproj
+++ b/Source/RouteMapDecorators.Tests/RouteMapDecorators.Tests.csproj
@@ -31,12 +31,26 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\Libraries\NUnit\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Web.Routing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IntegrationFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestingController.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RouteMapDecorators\RouteMapDecorators.csproj">
+      <Project>{D79B2B91-DBD2-47F8-8C6F-0F152EF646BF}</Project>
+      <Name>RouteMapDecorators</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
