--- a/src/RouteMapDecorators.Tests/RouteMapDecorators.Tests.csproj
+++ b/src/RouteMapDecorators.Tests/RouteMapDecorators.Tests.csproj
@@ -39,7 +39,9 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
-    <Reference Include="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="System.Web.Routing" />
   </ItemGroup>
   <ItemGroup>
