--- a/src/RouteMapDecorators/RouteMapDecorators.csproj
+++ b/src/RouteMapDecorators/RouteMapDecorators.csproj
@@ -37,13 +37,20 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Abstractions" />
     <Reference Include="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="System.Web.Routing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DELETEAttribute.cs" />
+    <Compile Include="GETAttribute.cs" />
+    <Compile Include="IRouteMapAttribute.cs" />
+    <Compile Include="POSTAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PUTAttribute.cs" />
+    <Compile Include="RouteMapActionMethodSelectorAttribute.cs" />
     <Compile Include="RouteMapAttribute.cs" />
     <Compile Include="RouteMapRegistration.cs" />
     <Compile Include="RouteMapRegistry.cs" />
